@@ -1,12 +1,17 @@
 DIST gnupg-pkcs11-scd-0.02.tar.bz2 148173 RMD160 971628ec58ec76ba277054df29a65fbdda97a675 SHA1 1e5e5263c9824389d29a9d52844a4e3ecde97420 SHA256 cac50e7e4ae7df1af221b9fa984993613233e4c433c18f03583c38fa4f89c831
+DIST gnupg-pkcs11-scd-0.03.tar.bz2 105436 RMD160 806c99397ec0fe3ffe3fe5cb1356d453580dbfbe SHA1 9084d10ca955bd922104df4d9a11310a729cdb45 SHA256 f85e2c8574f066cfbd5ea15f86779ee33b97781ca8a971e7596960dcdbd9e651
 EBUILD gnupg-pkcs11-scd-0.02.ebuild 653 RMD160 bf87e0a0ec3c0e93b822a0ed9659851f2d54c5a3 SHA1 3d5e0ebdd884eeffb3f184d4466126f6ba9f2f98 SHA256 b20f4c80f210bb7401fe996cde981ac96b43cd28501ef313c9f7c03a532fb890
 MD5 1cf6a348bf1257f0766570bffca31bba gnupg-pkcs11-scd-0.02.ebuild 653
 RMD160 bf87e0a0ec3c0e93b822a0ed9659851f2d54c5a3 gnupg-pkcs11-scd-0.02.ebuild 653
 SHA256 b20f4c80f210bb7401fe996cde981ac96b43cd28501ef313c9f7c03a532fb890 gnupg-pkcs11-scd-0.02.ebuild 653
-MISC ChangeLog 377 RMD160 296672d8907f54734d715b3844635a36fe4809f9 SHA1 9f23719166b2eb6a9725ee016345fb361014071e SHA256 e38c1a575b55c41c73152385f59541c43659d7abbf2607970de21712c64e6ab4
-MD5 ba126fad7750fd4e6038e4489ce920dd ChangeLog 377
-RMD160 296672d8907f54734d715b3844635a36fe4809f9 ChangeLog 377
-SHA256 e38c1a575b55c41c73152385f59541c43659d7abbf2607970de21712c64e6ab4 ChangeLog 377
+EBUILD gnupg-pkcs11-scd-0.03.ebuild 684 RMD160 b95b9ba60e1ac5caaf4270d6e6e36c9c40329f20 SHA1 97aea05e928d1e26cc0efb11ec3ef38d09cd0d1a SHA256 75446ecbf142d905bbf3c409eefae0ad1f27e3fbd50b48c1e1c8e0a6fcfb7154
+MD5 cd6a1c19198ccd6bc95e43b59cae94fc gnupg-pkcs11-scd-0.03.ebuild 684
+RMD160 b95b9ba60e1ac5caaf4270d6e6e36c9c40329f20 gnupg-pkcs11-scd-0.03.ebuild 684
+SHA256 75446ecbf142d905bbf3c409eefae0ad1f27e3fbd50b48c1e1c8e0a6fcfb7154 gnupg-pkcs11-scd-0.03.ebuild 684
+MISC ChangeLog 512 RMD160 a489999871910bfc8c3ca9c275376fd0706c5bc0 SHA1 fe9d548be62f4a79dd99bba040a382662c36a4e7 SHA256 4e980894df9eff0011416ed55b6d3977bfce599a04852e62d2b511a90b66c817
+MD5 1c4089b7d06e9677333d1e7007e956fd ChangeLog 512
+RMD160 a489999871910bfc8c3ca9c275376fd0706c5bc0 ChangeLog 512
+SHA256 4e980894df9eff0011416ed55b6d3977bfce599a04852e62d2b511a90b66c817 ChangeLog 512
 MISC metadata.xml 355 RMD160 6ccb1cda999081e9b47c42be75b752462ebe3a56 SHA1 b02185351fb715f2e3921fb05e7ab9cb7e878a9f SHA256 714f82ec7b9de1e47249240b07096e9e0b2cd583476c2eeac7d9d073109fddd7
 MD5 1de351a8a6482e33fb2347d3a1c2dc49 metadata.xml 355
 RMD160 6ccb1cda999081e9b47c42be75b752462ebe3a56 metadata.xml 355
@@ -14,3 +19,6 @@ SHA256 714f82ec7b9de1e47249240b07096e9e0b2cd583476c2eeac7d9d073109fddd7 metadata
 MD5 02ccd1b2eefb7f2b2077d9495d0ec48f files/digest-gnupg-pkcs11-scd-0.02 268
 RMD160 e57e3fec538580c0e033b775c6a1865e7545897c files/digest-gnupg-pkcs11-scd-0.02 268
 SHA256 02c680349a6f902da76c7e1a8c875936d496b74a46cddceaf332ce310b2d7ade files/digest-gnupg-pkcs11-scd-0.02 268
+MD5 da1bcb41728b2bc563dcda7bd4ee3a0c files/digest-gnupg-pkcs11-scd-0.03 268
+RMD160 ba42f2db11b7660ca3b8e397ade5f5fe171fb779 files/digest-gnupg-pkcs11-scd-0.03 268
+SHA256 d8941b314da2d696f71fd2567552e132f78ad21b3a3601896cb2d00212b00f32 files/digest-gnupg-pkcs11-scd-0.03 268
