@@ -1,0 +1,3 @@
+MD5 e07a45eedaa4b1e12d9c98276440b84a gnupg-pkcs11-scd-0.03.tar.bz2 105436
+RMD160 806c99397ec0fe3ffe3fe5cb1356d453580dbfbe gnupg-pkcs11-scd-0.03.tar.bz2 105436
+SHA256 f85e2c8574f066cfbd5ea15f86779ee33b97781ca8a971e7596960dcdbd9e651 gnupg-pkcs11-scd-0.03.tar.bz2 105436
