@@ -1,6 +1,12 @@
 # ChangeLog for app-crypt/gnupg-pkcs11-scd
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-crypt/gnupg-pkcs11-scd/ChangeLog,v 1.1 2006/10/20 22:10:47 alonbl Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-crypt/gnupg-pkcs11-scd/ChangeLog,v 1.2 2007/01/05 15:03:27 alonbl Exp $
+
+*gnupg-pkcs11-scd-0.03 (05 Jan 2007)
+
+  05 Jan 2007; Alon Bar-Lev <alonbl@gentoo.org>
+  +gnupg-pkcs11-scd-0.03.ebuild:
+  Version bump
 
 *gnupg-pkcs11-scd-0.02 (20 Oct 2006)
 
